app/webroot/assets/css/base.css
/* ... */
.reports.loading .reports__canvas {
  opacity: 0 !important;
  margin-top: 150px !important;
}
.reports__cube {
  background: url(../img/cube_achievements.svg) no-repeat center/contain;
  width: 160px;
  height: 184px;
  position: absolute;
  overflow: visible;
  transition-timing-function: ease;
  transition-property: all;
  margin: auto;
}
.reports__cube--1 {
  top: 92px;
  left: 80px;
  z-index: 3;
}
.reports__cube--2 {
  left: 0;
  top: 46px;
  z-index: 2;
}
.reports__cube--3 {
  left: 160px;
  top: 46px;
  z-index: 1;
}

@media (max-width: 960px) {
  .reports__background {
    display: none;
  }
  .reports__link-wrapper {
    height: 350px;
    max-width: none;
  }
  .reports {
    align-items: flex-start;
  }
  .reports__left {
    text-align: center;
  }
  .reports__right {
    width: 60%;
  }
  .reports__canvas {
    transform: scale(0.6875);
  }
  .reports__button,
  .reports__link {
    padding-right: 20px;
  }
  .reports__link.h--beta {
    font-size: 20px;
  }
}

@media (max-width: 720px) {
  .reports__link-wrapper {
    height: auto;
  }
  .reports {
    display: block;
  }
  .reports__left,
  .reports__right {
    width: 100%;
    float: none;
    padding: 0;
  }
  .reports__left {
    height: 200px;
  }
  .reports__canvas {
    transform: scale(0.5);
    height: auto;
  }
  .reports__link {
    max-width: none;
  }
}

@media (max-width: 540px) {
  .reports__left {
    text-align: left;
  }
  .reports__canvas {
    width: auto;
    left: calc(50% - 82px);
  }
  .reports__button {
    width: 100%;
    text-align: center;
  }
  .reports__button + .reports__button {
    padding-top: 10px;
  }
  .reports__link {
    text-align: left;
  }
  .reports__right {
    text-align: center;
  }
  .reports__button .animation-ctl-button__symbol {
    margin: 0 auto 8px auto;
    display: block;
  }
}

/* Report Landing Page
---------------------------------------------------------------- */
.report-landing-hero {
  background-color: var(--color-blue);
  text-align: center;
  color: white;
}
.report-landing .report-landing-hero {
  background: var(--color-gradient-blue--inverse);
}
.report-landing-hero__cubes {
  display: flex;
  justify-content: center;
  margin: 0 auto;
  flex-wrap: wrap;
}
.report-landing__jbs {
  margin-top: -100px;
}

@media (max-width: 1100px) {
  .report-landing .cp {
    padding-bottom: 100px
  }
}
@media (max-width: 550px) {
  .report-landing .cp--6x-top {
    padding-bottom: 510px;
  }
}

/* Nav Cube
---------------------------------------------------------------- */
.nav-cube {
  flex-grow: 1;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 200px;
  height: 240px;
  background: url(../img/cube_themen_blue.svg) no-repeat center/contain;
  margin: 20px;
}
.nav-cube__title {
  color: var(--color-black);
}
.nav-cube:hover .nav-cube__title {
  color: var(--color-white);
}
.nav-cube:hover,
.nav-cube.active {
  background-image: url(../img/cube_themen_purple.svg);
}

@media (min-width: 1181px) {
  .nav-cube__title {
    margin-top: -144px;
  }
  .nav-cube {
    height: 300px;
    margin: 20px;
  }
}

@media (max-width: 1180px) {
  .nav-cube__title {
    margin-top: -137px;
  }
  .nav-cube {
    height: 270px;
    margin: 8px;
  }
}

@media (max-width: 1000px) {
  .nav-cube__title {
    margin-top: -116px;
  }
  .nav-cube {
    margin: 5px;
  }
}

@media (max-width: 900px) {
  .nav-cube {
    margin: 20px;
  }
  .nav-cube__title {
    margin-top: -133px;
  }
}

@media (max-width: 550px) {
  .nav-cube__title {
    margin-top: -113px;
  }
}

@media (max-width: 500px) {
  .nav-cube {
    display: block;
    margin: 0;
    height: 160px;
    position: absolute;
  }
  .nav-cube:nth-of-type(2) {
    top: 200px;
    right: -22px;
  }
  .nav-cube:nth-of-type(3) {
    top: 200px;
    left: -22px;
  }
  .nav-cube:nth-of-type(4) {
    top: 320px;
  }
  .nav-cube__title {
    margin-top: 30px;
    left: 60px;
    position: absolute;
  }
  .nav-cube:nth-of-type(2) .nav-cube__title {
    left: 54px;
  }
  .nav-cube:nth-of-type(3) .nav-cube__title {
    left: 9px;
    top: -5px;
  }
  .nav-cube:nth-of-type(4) .nav-cube__title {
    left: 49px;
    max-width: 100px;
    text-align: center;
  }
}

@media (max-width: 320px) {
  .nav-cube:nth-of-type(2) {
    right: -19px;
  }
  .nav-cube:nth-of-type(3) {
    left: -19px;
  }
  .nav-cube:nth-of-type(4) {
    top: 320px;
  }
}

/* Report Detail Hero
---------------------------------------------------------------- */
.report-detail-hero {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 66vh;
  background: var(--color-lightgreen) no-repeat;
  background-size: cover;
  background-position: center center;
  position: relative;
}
.report-detail-hero__center-illu {
  z-index: 10;
}
.report-detail-hero__filter {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: var(--color-black);
  opacity: .45;
}
.filter {
  background-repeat: no-repeat;
  background-position: center 0px, 0px;
  background-size: 400px, 0px;
}
.filter-head {
  color: white;
  margin: 0;
  text-align: center;
  padding-top: 70px;
}
.filter-head--back {
  color: white;
  text-transform: uppercase;
  position: relative;
}
.filter-head--back:hover {
  opacity: 0.5;
}
.filter-head--menu {
  position: relative;
}
.filter-head--image {
  width: 450px;
  margin-top: -170px;
}
.filter-text {
  max-width: 760px;
  text-align: left;
  margin: -200px auto 0 auto;
}
.report-landing .filter-head-back-align a {
  border-bottom: none;
}

@media(max-width: 1100px) {
  .filter-head {
    padding-top: 150px;
  }
}

@media(max-width: 550px) {
  .filter-head--image {
    width: 300px;
    margin-top: -120px;
  }
  .filter-text {
    margin-top: -150px;
  }
  .report-landing .filter-head--back {
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .report-landing .filter-head-back-align {
    max-width: 110px;
    line-height: 15px;
    margin-bottom: -15px;
  }
}
/* ... */

